fix: photo and text width overflow

--- a/style.css
+++ b/style.css
@@ -498,11 +498,8 @@ footer .wrapper .contact-item {
     }
     
     .intro-text {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        text-align: justify;
-        width: auto;
+        min-width: auto;
+        max-width: 100%;
     }
 
     p {
@@ -510,18 +507,6 @@ footer .wrapper .contact-item {
         overflow-wrap: break-word;
         word-break: break-word;
         white-space: normal;
-    }
-
-    .adv-photo-wrapper {
-        display: flex;
-        align-items: center;
-    }
-    
-    .adv-photo-wrapper img{
-        max-width: 30rem;
-        max-height: 45rem;
-        background-size: cover;
-        border-radius: 5px;
     }
 
     .advantages-list{
@@ -645,6 +630,16 @@ footer .wrapper .contact-item {
     .about-wrapper 
     .adv-photo-wrapper img{
         width: 100%;
+    }
+
+    .about-wrapper .about-text {
+        min-width: auto;
+        max-width: 100%;
+    }
+    
+    .about-wrapper .adv-photo-wrapper img{
+        max-width: 100%;
+        height: auto;
     }
 
     .item-icon{
